// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`collapse-transition 基本使用 1`] = `
<xl-collapse-transition
  show={false}
>
  <xl-css-transition
    afterEnter={[Function]}
    beforeEnter={[Function]}
    beforeLeave={[Function]}
    enter={[Function]}
    enterCancelled={[Function]}
    leave={[Function]}
    leaveCancelled={[Function]}
    show={false}
  >
    <xl-transition
      afterAppear={[Function]}
      afterEnter={[Function]}
      afterLeave={[Function]}
      appear={[Function]}
      appearCancelled={[Function]}
      beforeAppear={[Function]}
      beforeEnter={[Function]}
      beforeLeave={[Function]}
      enter={[Function]}
      enterCancelled={[Function]}
      leave={[Function]}
      leaveCancelled={[Function]}
      show={false}
    />
  </xl-css-transition>
</xl-collapse-transition>
`;

exports[`collapse-transition 基本使用 2`] = `
<xl-collapse-transition
  show={true}
>
  <xl-css-transition
    afterEnter={[Function]}
    beforeEnter={[Function]}
    beforeLeave={[Function]}
    enter={[Function]}
    enterCancelled={[Function]}
    leave={[Function]}
    leaveCancelled={[Function]}
    show={true}
  >
    <xl-transition
      afterAppear={[Function]}
      afterEnter={[Function]}
      afterLeave={[Function]}
      appear={[Function]}
      appearCancelled={[Function]}
      beforeAppear={[Function]}
      beforeEnter={[Function]}
      beforeLeave={[Function]}
      enter={[Function]}
      enterCancelled={[Function]}
      leave={[Function]}
      leaveCancelled={[Function]}
      show={true}
    >
      <div
        style={
          Object {
            "boxSizing": "border-box",
            "overflow": "hidden",
            "paddingBottom": "0",
            "paddingTop": "0",
            "transition": "height 1s ease",
          }
        }
      >
        <div
          style={
            Object {
              "position": "relative",
            }
          }
        >
          <div />
        </div>
      </div>
    </xl-transition>
  </xl-css-transition>
</xl-collapse-transition>
`;

exports[`collapse-transition 测试forceRender 1`] = `
<xl-collapse-transition
  forceRender={true}
  show={false}
>
  <xl-css-transition
    afterEnter={[Function]}
    beforeEnter={[Function]}
    beforeLeave={[Function]}
    enter={[Function]}
    enterCancelled={[Function]}
    forceRender={true}
    leave={[Function]}
    leaveCancelled={[Function]}
    show={false}
  >
    <xl-transition
      afterAppear={[Function]}
      afterEnter={[Function]}
      afterLeave={[Function]}
      appear={[Function]}
      appearCancelled={[Function]}
      beforeAppear={[Function]}
      beforeEnter={[Function]}
      beforeLeave={[Function]}
      enter={[Function]}
      enterCancelled={[Function]}
      forceRender={true}
      leave={[Function]}
      leaveCancelled={[Function]}
      show={false}
    >
      <div
        style={
          Object {
            "boxSizing": "border-box",
            "display": "none",
            "overflow": "hidden",
            "paddingBottom": "0",
            "paddingTop": "0",
            "transition": "height 1s ease",
          }
        }
      >
        <div
          style={
            Object {
              "position": "relative",
            }
          }
        >
          <div />
        </div>
      </div>
    </xl-transition>
  </xl-css-transition>
</xl-collapse-transition>
`;

exports[`collapse-transition 测试forceRender 2`] = `
<xl-collapse-transition
  forceRender={true}
  show={true}
>
  <xl-css-transition
    afterEnter={[Function]}
    beforeEnter={[Function]}
    beforeLeave={[Function]}
    enter={[Function]}
    enterCancelled={[Function]}
    forceRender={true}
    leave={[Function]}
    leaveCancelled={[Function]}
    show={true}
  >
    <xl-transition
      afterAppear={[Function]}
      afterEnter={[Function]}
      afterLeave={[Function]}
      appear={[Function]}
      appearCancelled={[Function]}
      beforeAppear={[Function]}
      beforeEnter={[Function]}
      beforeLeave={[Function]}
      enter={[Function]}
      enterCancelled={[Function]}
      forceRender={true}
      leave={[Function]}
      leaveCancelled={[Function]}
      show={true}
    >
      <div
        style={
          Object {
            "boxSizing": "border-box",
            "overflow": "hidden",
            "paddingBottom": "0",
            "paddingTop": "0",
            "transition": "height 1s ease",
          }
        }
      >
        <div
          style={
            Object {
              "position": "relative",
            }
          }
        >
          <div />
        </div>
      </div>
    </xl-transition>
  </xl-css-transition>
</xl-collapse-transition>
`;
